src/test/ui/feature-gates/feature-gate-linker-flavor.stderr
error: attribute must be applied to a `static` variable
  --> $DIR/feature-gate-linker-flavor.rs:16:1
   |
LL | #[used]
   | ^^^^^^^

error: aborting due to previous error

